--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Dream Tech | Welcome
 
 </section>
 
-<sectin id = "newsletter">
+<section id = "newsletter">
 <div class ="container">
 <h2>Subscribe to my Newsletter </h2>
 
