--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@ Dream Tech | Services
 
 
 
-<sectin id = "newsletter">
+<section id = "newsletter">
 <div class ="container">
 <h2>Subscribe to my Newsletter </h2>
 
