--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Dream Tech | Welcome
 
 
     <footer>
-<p> Dream Tech Website Designs, Copyright &copy; </p>
+<p> Dream Tech Website Designs, Copyright &copy; 2021</p>
         </footer>
 </body>
 
