--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ Dream Tech | Welcome
     </title>
 
     <link rel= "stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="logo_html.png">
     </head>
 
     <body>
